Changed api and modified logic accordingly

--- a/settings.conf
+++ b/settings.conf
@@ -1,6 +1,6 @@
-CurrentWeatherApi=https://api.openweathermap.org/data/2.5/weather
-HourlyForecastApi=https://api.openweathermap.org/data/2.5/forecast/hourly
-DailyForecastApi=https://api.openweathermap.org/data/2.5/forecast/daily
+CurrentWeatherApi=https://community-open-weather-map.p.rapidapi.com/weather
+HourlyForecastApi=https://community-open-weather-map.p.rapidapi.com/forecast
+DailyForecastApi=https://community-open-weather-map.p.rapidapi.com/forecast
 HistoricalWeatherApi=https://api.worldweatheronline.com/premium/v1/past-weather.ashx
 HistoricalApiKey=9147c8147a9d4d8bb1f203842192104
-ApiKey=4bdac748869ecbd195cb05e9bce26006
+ApiKey=b0f43707e4mshe264a62715e18a8p17b722jsn64b7b52797ab
