Introduce RapidWeatherApi class, small refactoring
* All requests that are using rapid API should be inherited from
RapidWeatherApi
* Parse only upcoming 4 days from forecast data
* Use Qt logging instead of std::cerr
* Rename API keys and services in resources
* Pass API service to base class in order to simplify request formation

--- a/settings.conf
+++ b/settings.conf
@@ -1,6 +1,6 @@
-CurrentWeatherApi=https://community-open-weather-map.p.rapidapi.com/weather
-HourlyForecastApi=https://community-open-weather-map.p.rapidapi.com/forecast
-DailyForecastApi=https://community-open-weather-map.p.rapidapi.com/forecast
-HistoricalWeatherApi=https://api.worldweatheronline.com/premium/v1/past-weather.ashx
-HistoricalApiKey=9147c8147a9d4d8bb1f203842192104
-ApiKey=b0f43707e4mshe264a62715e18a8p17b722jsn64b7b52797ab
+CurrentWeatherApiService=https://community-open-weather-map.p.rapidapi.com/weather
+ForecastWeatherApiService=https://community-open-weather-map.p.rapidapi.com/forecast
+HistoricalWeatherApiService=https://api.worldweatheronline.com/premium/v1/past-weather.ashx
+CurrentWeatherApiKey=b0f43707e4mshe264a62715e18a8p17b722jsn64b7b52797ab
+ForecastWeatherApiKey=b0f43707e4mshe264a62715e18a8p17b722jsn64b7b52797ab
+HistoricalWeatherApiKey=9147c8147a9d4d8bb1f203842192104
