Use daily forecast instead of hourly

--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 CurrentWeatherApiService=https://community-open-weather-map.p.rapidapi.com/weather
-ForecastWeatherApiService=https://community-open-weather-map.p.rapidapi.com/forecast
+ForecastWeatherApiService=https://community-open-weather-map.p.rapidapi.com/forecast/daily
 HistoricalWeatherApiService=https://api.worldweatheronline.com/premium/v1/past-weather.ashx
 CurrentWeatherApiKey=b0f43707e4mshe264a62715e18a8p17b722jsn64b7b52797ab
 ForecastWeatherApiKey=b0f43707e4mshe264a62715e18a8p17b722jsn64b7b52797ab
